--- a/encryption/encryption.vcxproj
+++ b/encryption/encryption.vcxproj
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\OpenSSL-Win64\include;$(SolutionDir)include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\OpenSSL-Win64\lib\VC\x64\MT;$(OutDir);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\OpenSSL-Win64\include;$(SolutionDir)include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\OpenSSL-Win64\lib\VC\x64\MT;$(OutDir);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\OpenSSL-Win64\include;$(SolutionDir)include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\OpenSSL-Win64\lib\VC\x64\MT;$(OutDir);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\OpenSSL-Win64\include;$(SolutionDir)include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\OpenSSL-Win64\lib\VC\x64\MT;$(OutDir);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -127,6 +127,14 @@
       <EnableUAC>false</EnableUAC>
       <AdditionalDependencies>libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>mkdir $(SolutionDir)cs_wrapper
+swig -c++ -csharp -I$(SolutionDir)include -dllimport $(TargetName) -outdir $(SolutionDir)cs_wrapper -outfile Encryption.cs -namespace Encryption $(ProjectName).idl</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>copy $(OutDir)$(TargetName).dll $(SolutionDir)LicenseGenerator\bin\$(Configuration)\net8.0-windows\$(TargetName).dll
+copy $(OutDir)$(TargetName).pdb $(SolutionDir)LicenseGenerator\bin\$(Configuration)\net8.0-windows\$(TargetName).pdb</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -147,6 +155,14 @@
       <EnableUAC>false</EnableUAC>
       <AdditionalDependencies>libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>mkdir $(SolutionDir)cs_wrapper
+swig -c++ -csharp -I$(SolutionDir)include -dllimport $(TargetName) -outdir $(SolutionDir)cs_wrapper -outfile Encryption.cs -namespace Encryption $(ProjectName).idl</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>copy $(OutDir)$(TargetName).dll $(SolutionDir)LicenseGenerator\bin\$(Configuration)\net8.0-windows\$(TargetName).dll
+copy $(OutDir)$(TargetName).pdb $(SolutionDir)LicenseGenerator\bin\$(Configuration)\net8.0-windows\$(TargetName).pdb</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Encryptor.hpp" />
@@ -156,12 +172,23 @@
   <ItemGroup>
     <ClCompile Include="..\src\Encryptor.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="encryption_wrap.cxx" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="encryption.idl">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">mkdir $(SolutionDir)cs_wrapper
+swig -c++ -csharp -I$(SolutionDir)include -dllimport $(TargetName) -outdir $(SolutionDir)cs_wrapper -outfile Encryption.cs -namespace Encryption $(ProjectName).idl</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">mkdir $(SolutionDir)cs_wrapper
+swig -c++ -csharp -I$(SolutionDir)include -dllimport $(TargetName) -outdir $(SolutionDir)cs_wrapper -outfile Encryption.cs -namespace Encryption $(ProjectName).idl</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectName)_wrap.cxx;%(Outputs)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectName)_wrap.cxx;%(Outputs)</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
