--- a/LicenseGenerator/LicenseGenerator.csproj
+++ b/LicenseGenerator/LicenseGenerator.csproj
@@ -7,11 +7,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
-    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <AssemblyVersion>1.0.2</AssemblyVersion>
+    <ApplicationIcon>QuadrepLogo.ico</ApplicationIcon>
+    <Company>Quadrep Ltd.</Company>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="..\cs_wrapper\Encryption.cs" Link="Encryption.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="QuadrepLogo.ico" />
   </ItemGroup>
 
   <ItemGroup>
